--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "homepage": "https://github.com/DuoSoftware/DVP-CDREngine#readme",
   "dependencies": {
     "amqp": "^0.2.6",
+    "async": "^2.0.1",
     "config": "^1.12.0",
     "dvp-common": "1.3.0",
     "dvp-dbmodels": "2.3.0",
     "ioredis": "^3.1.1",
-    "redis": "^2.6.2"
+    "redlock": "^3.0.0"
   }
 }
